--- a/res/values/color.xml
+++ b/res/values/color.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
+ <color name ="HoloDark">#212121</color>
  <color name ="Highlight">#FFFF99</color>
  <color name ="HoloBlue">#33B5E5</color>
  <color name="White">#FFFFFF</color>
