--- a/res/layout/schedule_view.xml
+++ b/res/layout/schedule_view.xml
@@ -11,6 +11,7 @@
         android:layout_height="match_parent">
 
     <LinearLayout 
+        android:paddingTop="50sp"
 	    android:layout_height="match_parent" 
 	    android:layout_width="match_parent"
 	    android:orientation="vertical">
