--- a/res/layout/schedule_view.xml
+++ b/res/layout/schedule_view.xml
@@ -65,7 +65,7 @@
 		        android:id="@+id/todoViewGroup"
 		        android:background="@drawable/rounded"
 		        android:layout_width="match_parent"
-		        android:layout_height="match_parent"
+		        android:layout_height="wrap_content"
 		        android:longClickable="true"
 		        android:divider="@android:color/transparent"				    
 				android:dividerHeight="5sp"/>
