--- a/res/layout/schedule_view.xml
+++ b/res/layout/schedule_view.xml
@@ -15,7 +15,8 @@
         android:paddingTop="50sp"
 	    android:layout_height="match_parent" 
 	    android:layout_width="match_parent"
-	    android:orientation="vertical">
+	    android:orientation="vertical"
+	    android:clickable="true">
 	    <!-- Use this Specific ListView element for event objects -->
 	    
 	    <ViewStub
