--- a/res/menu/settings_menu.xml
+++ b/res/menu/settings_menu.xml
@@ -4,4 +4,6 @@
         android:title="@string/clear_all"/>
       <item android:id="@+id/test_item"
         android:title="@string/test_item"/>
+      <item android:id="@+id/test_cancel"
+          android:title="Cancel Alarm"/>
 </menu>
