--- a/res/menu/settings_menu.xml
+++ b/res/menu/settings_menu.xml
@@ -2,6 +2,6 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android" >
       <item android:id="@+id/full_clear"
         android:title="@string/clear_all"/>
-      <item android:id="@+id/get_mill"
-          android:title="Get Milliseconds"/>
+      <item android:id="@+id/force_sync"
+          android:title="@string/force_cloud"/>
 </menu>
